--- a/ecotourism/package.json
+++ b/ecotourism/package.json
@@ -9,13 +9,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-<<<<<<< HEAD
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "heroicons-react": "^1.4.1",
-=======
-    "framer-motion": "^10.12.18",
->>>>>>> e0e437b881a5bbd1ad227ed5622c36ea2c1a3936
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -29,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 8080"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
