--- a/ecotourism/package.json
+++ b/ecotourism/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.7.12",
     "web-vitals": "^2.1.4"
