--- a/ecotourism/package.json
+++ b/ecotourism/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
+    "g": "^2.0.1",
     "heroicons-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
@@ -52,5 +54,6 @@
   },
   "devDependencies": {
     "typescript": "^5.1.6"
-  }
+  },
+  "homepage": "."
 }
